# mijia-apk

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  settings.gradle
.github/workflows/: android-apk.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sunnyday/mijiaapk/: AppSettings.java  BootReceiver.java  MainActivity.java  MiioLanClient.java  PlugAutomationService.java
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: strings.xml  styles.xml
scripts/: run.ps1
src/mijia_plug_api/: __init__.py  config.py  miio_lan.py  plug.py  server.py
tests/: test_config.py  test_server.py
